UI changes for edit order screen

--- a/src/app/inbox-app.html
+++ b/src/app/inbox-app.html
@@ -1,5 +1,5 @@
 <div layout="row">
-  <md-sidenav-container layout="row" flex="10" layout-align="center center">
+  <md-sidenav-container layout="row" flex="10" hide show-gt-lg layout-align="center center">
     <md-sidenav class="leftnav" name="left" [style]="hasMedia('gt-md') ? 'side' : 'over'">
       <ib-left-nav>Left Navigation</ib-left-nav>
     </md-sidenav>
