--- a/src/app/order/components/preview-order.component.html
+++ b/src/app/order/components/preview-order.component.html
@@ -188,7 +188,7 @@
             <input [(ngModel)] = "currentOrder.contactNumber" >
           </div>
         </div>
-        <div class="tableClass" layout-padding>
+        <div class="tableClass edit-order" layout-padding>
           <h4>Shipping Address</h4>
           <div layout-gt-sm="row" >
             <div layout-gt-sm="row" flex="50">
