--- a/src/app/order/components/preview-order.component.css
+++ b/src/app/order/components/preview-order.component.css
@@ -262,7 +262,21 @@ input[type=number] {
 .datepicker {
   width :130px;
 }
+.edit-order label {
+  top: -45px;
+  float: left;
+  position: absolute;
+  left: 7px;
+}
 
+.edit-order input {
+  color: #000;
+  border: 0px;
+}
+
+.edit-order input:focus {
+  border: 0px;
+}
 
 @media all and (max-width:1380px) and (min-width: 320px) {
   .assigned-section {
