--- a/src/app/order/components/preview-order.component.css
+++ b/src/app/order/components/preview-order.component.css
@@ -271,7 +271,13 @@ input[type=number] {
 
 .edit-order input {
   color: #000;
-  border: 0px;
+  border: 1px solid #ECECEC;
+  width: 95%;
+  padding: 5px;
+}
+
+.place-order input {
+  border: 1px solid #ECECEC;
 }
 
 .edit-order input:focus {
