--- a/src/app/order/components/preview-order.component.html
+++ b/src/app/order/components/preview-order.component.html
@@ -139,7 +139,7 @@
           </div>
         </div>
 
-        <div layout="row" *ngFor="#item of currentOrder.orderDetails" class="md-caption md-list-item-text order-row-list">
+        <div layout="row" *ngFor="#item of currentOrder.items" class="md-caption md-list-item-text order-row-list">
           <div flex="50">
             <h4>{{item.name}}</h4>
             <h4>{{item.detail}}</h4>
@@ -298,7 +298,7 @@
               Action
             </div>
           </div>
-          <div layout="row" *ngFor="#item of currentOrder.orderDetails" class="md-caption md-list-item-text order-row-list">
+          <div *ngFor="#item of currentOrder.items" class="md-caption md-list-item-text order-row-list" layout="row">
 
             <div flex="35">
               <h4 layout-margin>{{item.name}}</h4>
