Displayed history orders successfully.

--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -29,15 +29,15 @@
   <div layout="row" layout-xs="column" class="assigned-section">
     <div flex class="assigned-select" flex="40">
       <label flex="100" layout="column">Assigned to :</label>
-      <!--<md-input-container class="md-block" flex-gt-sm flex>-->
-        <!--<select [(ngModel)]="task.assignedTo">-->
-          <!--<option>Swapnil</option>-->
-          <!--<option>Waqar</option>-->
-          <!--<option>Chetan</option>-->
-          <!--<option>Parag</option>-->
-          <!--<option>Sudhakar</option>-->
-        <!--</select>-->
-      <!--</md-input-container>-->
+      <md-input-container class="md-block" flex-gt-sm flex>
+        <select [(ngModel)]="task.assignedTo">
+          <option>Swapnil</option>
+          <option>Waqar</option>
+          <option>Chetan</option>
+          <option>Parag</option>
+          <option>Sudhakar</option>
+        </select>
+      </md-input-container>
       <img src="app/order/images/chat-box.svg" class="chat-icon" >
     </div>
 
