--- a/src/app/inbox/inbox.component.html
+++ b/src/app/inbox/inbox.component.html
@@ -21,7 +21,8 @@
 
       <md-list class="inbox-list">
         <div *ngFor="#item of (itemList | inboxFilter:'filterBy': filterBy )" (click)="navigateTo(item)" >
-          <ib-email-compact-view [email]="item" *ngIf="item.type == 'Email'"></ib-email-compact-view>
+          <ib-email-compact-view [email]="item" *ngIf="item.type == 'Email'" [class.selected]="selected === item.id "
+                                 (click)="select(item.id)"></ib-email-compact-view>
           <ib-order-compact-view [order]="item" *ngIf="item.type == 'Order'"></ib-order-compact-view>
           <ib-audio-compact-view [audioContent]="item" *ngIf="item.type == 'AudioContent'"></ib-audio-compact-view>
           <md-divider></md-divider>
