--- a/src/app/inbox/item-views/email-compact-view.html
+++ b/src/app/inbox/item-views/email-compact-view.html
@@ -1,6 +1,5 @@
-<md-list-item class="md-3-line email-compact"  [class.selected]="selected === 'Inbox' "
-              (click)="select('Inbox')">
-  <div [class.selected]="selected === 'Inbox' " (click)="select('Inbox')"> </div>
+<md-list-item class="md-3-line email-compact"  >
+  <div > </div>
   <div class="client-section">
     <span><img src="app/inbox/images/email.png"> </span>
     <img [src]="'app/share/images/company-logo/'+email.fromCompany + '.png'" class="md-avatar client-img" alt="{{email.from}}"/>
