Added working datepicker on create order.

--- a/src/app/order/components/create-order.component.html
+++ b/src/app/order/components/create-order.component.html
@@ -18,8 +18,14 @@
       <md-list layout="column" layout-align="end end">
         <md-list-item class="md-3-line col-order-detail">
           <div class="md-list-item-text">
-            <h3>Order Date : <input class="datepicker" type="date" [(ngModel)]="task.assignedOn"/></h3>
-            <h3>Delivery Date : <input  class="datepicker" type="date" [(ngModel)]="task.completeBy"/></h3>
+            <!--<h3>Order Date : <input class="datepicker" type="date" [(ngModel)]="task.assignedOn"/></h3>-->
+            <h3>Order Date : <my-date-picker [options]="myDatePickerOptions"
+                                             (dateChanged)="onDate1Changed($event)"
+                                             [selDate]="selectedDate1"></my-date-picker></h3>
+            <!--<h3>Delivery Date : <input  class="datepicker" type="date" [(ngModel)]="task.completeBy"/></h3>-->
+            <h3>Delivery Date : <my-date-picker [options]="myDatePickerOptions"
+                                             (dateChanged)="onDate2Changed($event)"
+                                             [selDate]="selectedDate2"></my-date-picker></h3>
           </div>
         </md-list-item>
       </md-list>
