--- a/src/app/inbox/item-views/list-view.scss
+++ b/src/app/inbox/item-views/list-view.scss
@@ -1,6 +1,12 @@
+$ca-light-gray: #EAEAEA;
+$ca-gray: #cccccc;
+$ca-dark-gray: #b7b7b7;
+$ca-drak-yellow: #FFFACD;
+$ca-text-editor-bg: #b2b2b2;
+
 .assign-order {
-  background:#EAEAEA;
-  box-shadow: 1px 4px 6px #ccc;
+  background:$ca-light-gray;
+  box-shadow: 1px 4px 6px $ca-gray;
   margin-bottom: 5px;
   padding: 0px 10px;
   span {
@@ -17,7 +23,7 @@
 .inbox-list {
   padding: 0px;
   &:hover {
-    backgroud:#EAEAEA;
+    backgroud:$ca-light-gray;
   }
 }
 .inbox-section {
@@ -32,16 +38,16 @@
 }
 .client-img{
   padding: 10px;
-  border:1px solid #b7b7b7;
+  border:1px solid $ca-dark-gray;
   margin:5px 20px 0px 30px;
 }
 .client-section {
-  position: relative;
-}
-.client-section span img {
-  position: absolute;
-  right: 16px;
-  top: 8px;
+  position: relative; 
+  span img {
+    position: absolute;
+    right: 16px;
+    top: 8px;
+  }
 }
 .md-list-item-text h3.list-label {
   width: 90%;
@@ -59,7 +65,7 @@
   bottom: 5px;
   font-size: 11px;
   text-align: right;
-  background: lemonchiffon;
+  background: $ca-drak-yellow;
 }
 .user-avtar {
   margin-right: 10px;
@@ -71,10 +77,6 @@
 .md-3-line {
   min-height: inherit;
 }
-.selected {
-  background: #EAEAEA;
-  cursor: pointer;
-}
 .email-compact {
   cursor: pointer;
 }
@@ -83,7 +85,7 @@
 }
 .disabled {
   color: gray;
-  border: medium solid gray;
+  border: medium solid $ca-gray;
 }
 .user-avtar {
   div {
@@ -118,27 +120,26 @@ audio::-webkit-media-controls-mute-button {
   margin:0px;
   box-shadow: 0px 0px 0px;
 }
-.text-editor {
-  background:#b2b2b2;
-  height: 29px
-}
-md-icon {
-  height: 24px;
-  padding: 5px 2px;
-  width: 20px;
-}
 .reply-content {
   min-height:182px;
-  border:1px solid #ccc;
+  border:1px solid $ca-gray;
   margin-top: 10px;
   md-input-container {
     padding : 0px 15px;
     margin:0px;
   }
+  .text-editor {
+    background:$ca-text-editor-bg;
+    height: 29px
+  }
+  md-icon {
+    height: 24px;
+    padding: 5px 2px;
+    width: 20px;
+  }
 }
 textarea {
-  width:100%;border:0px;
+  width:100%;
+  border:0px;
 }
-.md-errors-spacer {
-  display: none;
-}
+
